--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,8 @@ body * {
     color: var(--text-color);
 }
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 500px;
     margin: 56px auto 0px;
     padding: 0 24px;
 
@@ -76,12 +77,18 @@ body * {
     top: 50%;
     z-index: 1;
     transform: translateY(-50%);
+    animation: swipe_left 0.2s;
+
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: swipe_right 0.2s forwards;
 }
+
+#switch button:hover {
+    outline: 8px solid var(--higthligth-color);
+}
+
 #switch span {
     display: block;
     width: 64px;
@@ -125,5 +132,20 @@ footer {
     padding: 24px;
     text-align: center;
     font-size: 14px;
-    
+}
+
+@keyframes swipe_right {
+    from {
+        left: 0;
+    } to {
+        left: 50%;
+    }
+}
+
+@keyframes swipe_left {
+    from {
+        left: 50%;
+    } to {
+        left: 0;
+    }
 }
